# appmap

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  SBOM.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
ansible/: README.md  collect.yml  deploy.yml  deploy_windows.yml  inventory.example.ini  pull_and_report.yml  report.yml
ansible/group_vars/: all.yml
ansible/templates/: commatrix.conf.j2
commatrix/: __init__.py  __main__.py  aggregate.py  catalog.py  collector.py  collector_server.py  config.py  conntrack.py  ctnetlink.py  dns.py  dohcheck.py  dohdetect.py  elevate_linux.py  flows.py  netns.py  processes.py  report.py  resources.py  sni.py  sockdiag.py  sockets.py  store.py  timecheck.py  zabbix.py
commatrix/platform/: __init__.py
commatrix/signatures/: doh_endpoints.json  (+2 more)
docs/: README.md  elevace-cs.md  elevation-en.md  how-it-works.md  jak-funguje-cs.md  pouziti-cs.md
packaging/: commatrix.conf.example  install-lab-sudoers.sh  install-service.sh  install-zabbix-agent-test.sh  lab-commatrix-helper.sh  version.py  zabbix_userparameter.conf
snap/: snapcraft.yaml
systemd/: commatrix-collector.service  commatrix-export.service  commatrix-export.timer  commatrix-server.service
tests/: test_catalog.py  test_cli.py  test_conntrack.py  test_ctnetlink.py  test_dns.py  test_dohcheck.py  test_dohdetect.py  test_elevate_linux.py  test_elevate_windows.py  test_flows.py  test_netns.py  test_report.py  test_resources.py  test_sni.py  test_sockdiag.py  test_sockets.py  test_store.py  test_timecheck.py  test_windows.py
(+28 files in other folders)
